new feature added!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,18 @@
 {
     "cSpell.words": [
         "Acharya",
+        "Aoki",
+        "Budi",
         "Buhari",
+        "Dura",
+        "Gedai",
+        "Jasto",
+        "Jindagi",
         "Kaagaj",
         "Khacho",
+        "Kunwar",
         "Mohan",
+        "Neetesh",
         "Prasad",
         "scrollamount",
         "VTEN",
