some bug fixed!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "Kunwar",
         "Mohan",
         "Neetesh",
+        "nodownload",
         "Prasad",
         "scrollamount",
         "VTEN",
