--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "Acharya",
+        "Aeezy",
         "Aoki",
         "Budi",
         "Buhari",
@@ -15,7 +16,11 @@
         "Neetesh",
         "nodownload",
         "Prasad",
+        "Roka",
+        "Sarkar",
         "scrollamount",
+        "Thik",
+        "Trix",
         "VTEN",
         "कागजको"
     ]
