--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "Buhari",
         "Dura",
         "Gedai",
+        "hoin",
         "Jasto",
         "Jindagi",
         "Kaagaj",
@@ -20,6 +21,7 @@
         "Sarkar",
         "scrollamount",
         "Thik",
+        "Timile",
         "Trix",
         "VTEN",
         "कागजको"
