--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "Acharya",
         "Aeezy",
         "Aoki",
+        "Badhyo",
+        "Balidan",
         "Budi",
         "Buhari",
         "Dura",
