Some New cHanges

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,27 +5,43 @@
         "Aoki",
         "Badhyo",
         "Balidan",
+        "Baschu",
+        "BLUESSS",
         "Budi",
         "Buhari",
         "Dura",
+        "GARRA",
         "Gedai",
+        "Herda",
         "hoin",
+        "Hola",
         "Jasto",
         "Jindagi",
         "Kaagaj",
         "Khacho",
         "Kunwar",
+        "LAGYO",
+        "MACHHAPUCHHARE",
         "Mohan",
+        "Mohansharma",
         "Neetesh",
         "nodownload",
+        "NRITYA",
+        "Phosphenes",
         "Prasad",
+        "Ramro",
+        "RINGATA",
         "Roka",
+        "SACAR",
         "Sarkar",
+        "Sasheet",
         "scrollamount",
         "Thik",
         "Timile",
+        "Tolai",
         "Trix",
         "VTEN",
+        "Yestai",
         "कागजको"
     ]
 }
